--- a/charts/iceberg-rest-api/templates/service.yaml
+++ b/charts/iceberg-rest-api/templates/service.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
-  type: LoadBalancer
+  type: ClusterIP
