--- a/charts/iceberg-rest-api/templates/deployment.yaml
+++ b/charts/iceberg-rest-api/templates/deployment.yaml
@@ -1,3 +1,7 @@
+{{- $podNodeSelector := include "rosecape.podNodeSelector" (dict "Release" .Release "Values" .Values "nodeSelector" .Values.nodeSelector) }}
+{{- $podAffinity := include "rosecape.podAffinity" (dict "Release" .Release "Values" .Values "affinity" .Values.affinity) }}
+{{- $podTolerations := include "rosecape.podTolerations" (dict "Release" .Release "Values" .Values "tolerations" .Values.tolerations) }}
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -9,9 +13,24 @@ spec:
       app: {{ template "fullname" . }}
   template:
     metadata:
+      {{- if .Values.annotations }}
+        annotations:
+          {{- toYaml .Values.annotations | nindent 4 }}
       labels:
         app: {{ template "fullname" . }}
     spec:
+      {{- if $podNodeSelector }}
+      nodeSelector:
+        {{- $podNodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if $podAffinity }}
+      affinity:
+        {{- $podAffinity | nindent 8 }}
+      {{- end }}
+      {{- if $podTolerations }}
+      tolerations:
+        {{- $podTolerations | nindent 8 }}
+      {{- end }}
       containers:
         - name: iceberg-rest-api
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
