--- a/charts/iceberg-rest-api/values.yaml
+++ b/charts/iceberg-rest-api/values.yaml
@@ -1,7 +1,20 @@
 replicaCount: 1
+
 image:
   repository: ghcr.io/rosecape/iceberg-rest-api
   tag: latest
 
 service:
   port: 8181
+
+nodeSelector: {}
+
+affinity: {}
+
+tolerations: []
+
+defaultNodeSelector: {}
+
+defaultAffinity: {}
+
+defaultTolerations: []
